# BjarneStroustrupProgrammingPrinciplesAndPractice

./: CMakeLists.txt  README.md
Chapter14GraphicsClassDesign/: Examples.cpp  drill.cpp
Chapter15GraphingFunctions/: Drill.cpp
Chapter17VectorAndFreeStore/: drill.cpp  exercise2.cpp
Chapter24/: Matrix.h  MatrixIO.h  ex1.cpp
Chapter3/: ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  letter.cpp
Chapter4/: Drill.cpp  Drill2.cpp  TryThis1.cpp  TryThis2.cpp  TryThis3.cpp  TryThis4.cpp  ex2.cpp  ex3.cpp  ex5.cpp  ex7.cpp
Chapter5/: Drill.cpp  ex11.cpp  ex2.cpp  ex3.cpp  ex8.cpp  tryThis1.cpp
Chapter6/: Calculator.cpp
Chapter7/: Calculator08buggy.cpp
Chapter8Functions/: ex2.cpp  ex5.cpp  ex6.cpp
Chapter9Classes/: Book.cpp  Book.h  Chrono.cpp  Chrono.h  Library.cpp  Library.h  Patron.cpp  Patron.h  ex5.cpp
