cmake_minimum_required(VERSION 3.24)
project(BjarneStroustrupProgrammingPrinciplesAndPractice)

set(CMAKE_CXX_STANDARD 23)

add_executable(BjarneStroustrupProgrammingPrinciplesAndPractice Chapter9Classes/Chrono.cpp Chapter9Classes/Chrono.h Chapter9Classes/ex5.cpp Chapter9Classes/Book.h Chapter9Classes/Book.cpp Chapter9Classes/Patron.cpp Chapter9Classes/Patron.h Chapter9Classes/Library.h Chapter9Classes/Library.cpp)
